fix: ajuste de márgenes y compresión de diseño para maximizar espacio en PDF e impresión

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       body {
         background-color: white !important;
         margin: 0 !important;
-        padding: 1cm !important;
-        /* Slightly smaller padding to fit more content */
+        padding: 0.7cm !important;
+        /* Compressed to fit more content */
       }
 
       * {
@@ -107,7 +107,7 @@
         border-color: #000 !important;
       }
 
-      /* Intelligent breaks: Keep sections together as requested */
+      /* Intelligent breaks: Keep sections together but compressed */
       .institutional-section,
       .activity-block,
       .evaluation-card,
