--- a/index.html
+++ b/index.html
@@ -8,57 +8,20 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
+    /* Premium Root Styles */
+    :root {
+      --primary: #2563eb;
+      --secondary: #6366f1;
+    }
+
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f3f4f6;
+      margin: 0;
+      padding: 0;
+      background-color: #f8fafc;
+      overflow-x: hidden;
     }
 
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .animate-fade-in-up {
-      animation: fadeInUp 0.5s ease-out forwards;
-    }
-
-    @keyframes blob {
-      0% {
-        transform: translate(0px, 0px) scale(1);
-      }
-
-      33% {
-        transform: translate(30px, -50px) scale(1.1);
-      }
-
-      66% {
-        transform: translate(-20px, 20px) scale(0.9);
-      }
-
-      100% {
-        transform: translate(0px, 0px) scale(1);
-      }
-    }
-
-    .animate-blob {
-      animation: blob 7s infinite;
-    }
-
-    .animation-delay-2000 {
-      animation-delay: 2s;
-    }
-
-    .animation-delay-4000 {
-      animation-delay: 4s;
-    }
-
+    /* Print Overrides */
     @media print {
       @page {
         size: portrait;
@@ -74,51 +37,19 @@
       * {
         -webkit-print-color-adjust: exact !important;
         print-color-adjust: exact !important;
-        color-adjust: exact !important;
       }
 
-      .no-print,
-      header,
-      footer,
-      button,
-      nav,
-      .action-bar {
+      .no-print {
         display: none !important;
       }
 
-      .shadow-2xl,
-      .shadow-lg,
-      .shadow-md,
-      .shadow-sm {
-        box-shadow: none !important;
-      }
-
-      /* Permite que bloques grandes fluyan a la siguiente página sin dejar huecos */
       .activity-block,
       .evaluation-card,
       tr,
       td,
       th {
-        page-break-inside: auto !important;
-        break-inside: auto !important;
-        margin-bottom: 2px !important;
-      }
-
-      .institutional-section {
-        page-break-inside: auto !important;
-        break-inside: auto !important;
-      }
-
-      h1,
-      h2,
-      h3,
-      .institutional-header {
-        page-break-after: avoid !important;
-        break-after: avoid !important;
-      }
-
-      .bg-\[\#EDF7ED\] {
-        background-color: #EDF7ED !important;
+        page-break-inside: avoid !important;
+        break-inside: avoid !important;
       }
     }
   </style>
